# sankofa-codepush

./: CLAUDE.md  DEPRECATED.md  NOTICE  README.md  RELEASE_NOTES.md  RUNBOOK.md  cspell.config.yaml  pubspec.yaml
scripts/: apple_e2e.sh  generate_combined_coverage.sh  (+2 more)
updater/: CLAUDE.md  Cargo.toml  README.md  cspell.config.yaml
updater/.github/: dependabot.yml
updater/.github/workflows/: _shorebird_ci_flutter.yaml  main.yaml  publish.yaml  sankofa_ci.yaml
updater/docs/: boot_state_machine.md  integration_tests.md
updater/library_test_hooks/: Cargo.toml  build.rs  cbindgen.toml
updater/library_test_hooks/include/: library_test_hooks.h
updater/library_test_hooks/src/: lib.rs
updater/patch/: README.md
updater/patch/.cargo/: config.toml
updater/sankofa_code_push/: CHANGELOG.md  CONTRIBUTING.md  DEPRECATED.md  README.md  ffigen_test_hooks.yaml  pubspec.yaml
updater/sankofa_code_push/example/: pubspec.yaml  sankofa.yaml
updater/sankofa_code_push/example/android/app/src/main/: AndroidManifest.xml
updater/sankofa_code_push/example/lib/: main.dart
updater/sankofa_code_push/lib/: sankofa_code_push.dart
updater/sankofa_code_push/lib/src/: sankofa_updater.dart  sankofa_updater_io.dart  sankofa_updater_web.dart  updater.dart
updater/sankofa_code_push/test/integration/: all_test.dart
updater/sankofa_code_push/test/integration/helpers/: build.dart  fake_patch_server.dart  fixtures.dart  test_engine.dart
updater/sankofa_code_push/test/src/: sankofa_updater_io_test.dart  sankofa_updater_test.dart  sankofa_updater_web_test.dart  updater_test.dart
(+14 files in other folders)
